<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.example.diego.proyectofinal.DetalleContacto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:id="@+id/formulario"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/planeta"
            android:layout_marginLeft="3dp"
            android:src="@drawable/globe_50"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Formulario"
            android:layout_marginLeft="10dp"
            android:id="@+id/holamundo"
            android:layout_gravity="center"
            android:textColor="@android:color/background_light"
            android:textSize="19sp"
            android:textStyle="normal|bold" />







    </LinearLayout>

        <TextView
            android:id="@+id/confirmardatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmardatos"
            android:textStyle="bold"
            android:textSize="@dimen/confirmardatos"
            android:layout_gravity="center"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp" />


        <TextView
            android:id="@+id/nombrepersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="11dp"
            android:text="@string/pnombre"
            android:textSize="@dimen/dimensiondatos"
            />

        <TextView
            android:id="@+id/fechaestatico1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="11dp"
            android:text="Fecha de Nacimiento:"
            android:textSize="@dimen/dimensiondatos"
            />

        <TextView
            android:id="@+id/fechanacimientoFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-21dp"
            android:layout_marginLeft="199dp"
            android:text="@string/fechanacimiento"
            android:textSize="@dimen/dimensiondatos"
            />



        <TextView
            android:id="@+id/Telefestatico1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="11dp"
            android:text="Telefono:"
            android:textSize="@dimen/dimensiondatos"
            />

        <TextView
            android:id="@+id/telefonoF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="99dp"
            android:text="@string/ptelefono"
            android:textSize="@dimen/dimensiondatos"
            />
        <TextView
            android:id="@+id/emailestatico1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="11dp"
            android:text="Email:"
            android:textSize="@dimen/dimensiondatos"
            />
        <TextView
            android:id="@+id/EmailF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-23dp"
            android:layout_marginLeft="71dp"
            android:text="@string/pemail"
            android:textSize="@dimen/dimensiondatos"
            />
        <TextView
            android:id="@+id/descripcionestatico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="11dp"
            android:text="Descripcion:"
            android:textSize="@dimen/dimensiondatos"
            />
        <TextView
            android:id="@+id/descripcionF"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-23dp"
            android:layout_marginLeft="121dp"
            android:text="@string/descripcion"
            android:textSize="@dimen/dimensiondatos"
            android:layout_weight="0.17" />

        <Button
            android:id="@+id/editardatos"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Editar Datos"
            android:theme="@style/boton1"
            />








    </LinearLayout>


</RelativeLayout>
